Cleanup: Minor fixes